cmake_minimum_required(VERSION 3.23)
project(my_lessons_in_100ballov)

set(CMAKE_CXX_STANDARD 14)

add_executable(my_lessons_in_100ballov main.cpp 01_циклы_и_рандомные_числа.cpp 02_алгоритм_поиска.cpp 03_цикл_while.cpp 04_массивы.cpp 05_указатели.cpp 06_структуры.cpp 07_строки_и_структуры_продолжение.cpp Лабы/laba_1.cpp)
